trying to fix blurr on prices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -952,7 +952,7 @@ html {
   background-size: cover;
   -webkit-backdrop-filter: blur(1px);
           backdrop-filter: blur(1px); /* Adjust the blur level as needed */
-  background-color: rgba(158, 183, 157, 0.4) /* Adjust the alpha channel for transparency */
+  background-color: rgba(158, 183, 157, 0.4) ;/* Adjust the alpha channel for transparency */
 }
 
 /*---------------- This is for opacity on nav when scrolling ----------------*/
